Criando Web Token para validação das páginas
